[gd_scene load_steps=11 format=2]

[ext_resource path="res://Attacks/Sprites/basic shot/shot 1.png" type="Texture" id=1]
[ext_resource path="res://Attacks/Sprites/basic shot/shot 3.png" type="Texture" id=2]
[ext_resource path="res://Attacks/Sprites/basic shot/shot 2.png" type="Texture" id=3]
[ext_resource path="res://Attacks/Sprites/basic shot/shot 4.png" type="Texture" id=4]
[ext_resource path="res://Attacks/Basic shot/Basic shot.gd" type="Script" id=5]
[ext_resource path="res://Hit-Hurtboxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Music and Sounds/fireball spawn.wav" type="AudioStream" id=7]
[ext_resource path="res://Music and Sounds/firaball hit.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 10.0

[node name="Basic Shot" type="KinematicBody2D" groups=["Attacks"]]
modulate = Color( 0.95, 0.95, 0.95, 1 )
scale = Vector2( 0.3, 0.3 )
collision_layer = 8
collision_mask = 4
script = ExtResource( 5 )
damage = 80

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
playing = true

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 7, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="SpawnSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -7.0
autoplay = true

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="finished" from="HitSound" to="." method="_on_HitSound_finished"]

[editable path="Hitbox"]
